--- a/index.html
+++ b/index.html
@@ -144,20 +144,20 @@ Mon Nov 23 2020: Network defenses
  - [*Slides*](slides/14-networkdefenses.pdf)
  - *Read*: [NAT Slipstreaming](https://samy.pl/slipstream/) by Samy Kamkar
 
-Wed Nov 25 2020: Symmetric-key crypto
+Wed Nov 25 2020: No class
+
+Mon Nov 30 2020: Symmetric-key crypto
   - *Read*: [Chapter 5](https://www.cl.cam.ac.uk/~rja14/Papers/SEv3-ch5-7sep.pdf) (skip 5.2.3, 5.2.5, 5.3.4, 5.3.5, 5.4, 5.7, 5.8) of Security Engineering
 
-Thu Nov 26 2020: PA7: Crypto
+Tue Dec  1 2020: PA7: Crypto
 
-Mon Nov 30 2020: Public-key crypto
+Wed Dec  2 2020: Public-key crypto
   - *Read*: Sections 5.2.5, 5.3.4, 5.3.5, 5.7, 5.8 of Security Engineering
   - *Read*: [Bleichenbacher's RSA signature forgery based on implementation error](https://mailarchive.ietf.org/arch/msg/openpgp/5rnE9ZRN1AokBVj3VqblGlP63QE/) by Hal Finney
 
-Wed Dec  2 2020: TLS, PKI, and CT
+Mon Dec  7 2020: TLS, PKI, and CT 
 
-Thu Dec  3 2020: PA8: TLS
-
-Mon Dec  7 2020: More TLS, PKI, and CT
+Thu Dec  8 2020: PA8: TLS
 
 Wed Dec  9 2020: Privacy, anonymity, and ethics  
   - *Watch*: [Crypto 2020 Invited talk](https://www.youtube.com/watch?v=Ygq9ci0GFhA) by Seny Kamara
