--- a/cse127-fall20/index.html
+++ b/cse127-fall20/index.html
@@ -147,6 +147,7 @@ Mon Nov 23 2020: Network defenses
 Wed Nov 25 2020: No class
 
 Mon Nov 30 2020: Symmetric-key crypto
+  - [*Slides*](slides/14-symmetriccrypto.pdf)
   - *Read*: [Chapter 5](https://www.cl.cam.ac.uk/~rja14/Papers/SEv3-ch5-7sep.pdf) (skip 5.2.3, 5.2.5, 5.3.4, 5.3.5, 5.4, 5.7, 5.8) of Security Engineering
 
 Tue Dec  1 2020: PA7: Crypto
