--- a/pa/pa7.html
+++ b/pa/pa7.html
@@ -25,6 +25,8 @@ discussed on the wikipedia page.
 You can find some ciphertext produced with the Vigenere cipher under a certain
 key on Gradescope as the assignment "PA 7: ciphertext".
 
+We also provided sample code for decrypting ciphertext [sample decryption code here](../resources/decrypt.py).
+
 Assume that encrypting the letter `A` with the key results in no change, encrypting
 the letter `B` results in an increment by one place in the alphabet, encrypting `C`
 resulting in an increment by two places, etc.
