--- a/pa/pa7.html
+++ b/pa/pa7.html
@@ -249,7 +249,7 @@ or
 (source code)
 
 If you are compiling `fastcoll` from source, you can compile
-using this [makefile](../../resources/fastcoll_Makefile).  You will also need to
+using this [makefile](../resources/fastcoll_Makefile).  You will also need to
 have installed the Boost libraries.  On Ubuntu, you can install using `apt-get
 install libboost-all-dev`.  On OS X, you can install Boost via the [Homebrew
 package manager](http://brew.sh) using `brew install boost`.
