--- a/cse127-fall21/pa/pa8.html
+++ b/cse127-fall21/pa/pa8.html
@@ -11,159 +11,7 @@ This PA is optional, and will replace your lowest other PA grade.
 
 ## Setup
 
-Download the [VM image](https://drive.google.com/file/d/17mX_31nHvnHLANVIuLIturzri5A-XOs6/view?usp=sharing) containing the Crypto-DSL
-library as well as starter code for this PA. As before, the username and
-password are `student` and `hacktheplanet` and you can SSH into the VM using
-port 2222.
-
-All of the files you will need for this assignment can be found in the folder `tls-assignment/`.
-
-## Introduction
-
-In this assignment, you'll implement the client side of four short message
-exchanges in a domain specific language for writing cryptographic protocols.
-There are two unique features of this language that you will need to use in
-this assignment: *parties* and *cryptographic primitives*.
-
-### Parties
-
-Protocols in this language are defined in terms of *parties* which can send and
-receive messages. Parties look like functions, but begin with the keyword
-`party`. Parties defined in the same file can communicate by
-calling `<other_party>.send(value);` and `value = other_party.receive();`.
-Calls to `send` and `receive` always block until the operation is completed.
-For instance, the previous call to `receive` will block until `<other_party>`
-sends a message. Likewise, the call to `send` will
-not return until `<other_party>` is executing and receives the message.
-
-### Cryptographic primitives
-
-Several cryptographic primitives are built in to the language.
-Typically, they are defined at the top of the file with the keyword `global`,
-so that they are in scope for all functions and parties defined in the same file. For
-example, the starter code makes use of an `AuthenticatedCipher` object which
-has the following interface:
-
-```
-# instantiate a new AuthenticatedCipher
-C = AuthenticatedCipher();
-
-# encrypts plaintext using key
-ct = C.encrypt(key, plaintext);
-
-# decrypts ciphertext using key (decrypted is equivalent to plaintext)
-decrypted = C.decrypt(key, ct);
-```
-
-The `key` and `plaintext` can be any value that can be serialized, which means we can
-pass pretty much anything as these two arguments: You can encrypt an
-`Integer`, a `String`, a `Tuple`, or even an `AuthenticatedCipher`. This also
-means that the order of arguments is important, as it is easy to accidentally
-encrypt the key with the message instead of the other way around (i.e., `ct =
-C.encrypt(msg, key);` is incorrect but may not raise an error).
-
-We have included an appendix at the end of this page that documents some of
-the other cryptographic primitives that appear in the starter code, as well as
-how to write useful language structures (like `if` statments). The starter code in
-`prot.cy` also contains example usage of everything you will need to finish the
-assignment.
-
-## Starter code and scripts
-
-Within the `tls-assignment/` folder you will find the starter code (`prot.cy`),
-some library files (`schnorr.cy`, `ca_utils.cy`, `kdf.cy`), the executables
-to run the code (`cdsl` and `coordinator`), and some helper bash scripts.
-
-You will be finishing the implementation that is partially written in `prot.cy`.
-
-The `coordinator` manages the communication between all parties in the protocol, and
-needs to be running for messages to be sent. You can (re)start the coordinator
-at any time by running `./restart_coordinator.sh`. If at any time your client or server
-code hangs or otherwise is not connecting, simply re-run this script.
-
-The `./client.sh` and `./server.sh` scripts run the client and server respectively.
-They take two arguments: The protocol number (0-3) and a message to send to the other party.
-
-# Your tasks
-
-## Protocol 0: Unencrypted Messages (20 points)
-
-We have given you the code for `server0`, which expects an unencrypted message
-from the client and returns a response. Implement the corresponding `client0`
-code so that it prints out the message it receives from the server.
-
-If you implemented it correctly, then you should be able to send messages between the two parties:
-1. Ensure that the coordinator is running: `./restart_coordinator.sh`
-2. In one terminal, run the client: `./client.sh 0 "A message from client to server"`
-3. In another terminal, run the server: `./server.sh 0 "A response from server to client"`
-If all goes well, you should see each party's message print from the other party's output.
-
-## Protocol 1: Basic Asymmetric Encryption (20 points)
-
-Protocol 0 is obviously insecure: We're sending messages in the clear, and
-anyone can snoop on the traffic and see our messages. To fix this, we
-will use a Diffie-Hellman key exchange to derive a shared key that we will
-use to symmetrically encrypt messages between the client and server.
-
-Implement the party `client1`. The client should initiate a Diffie-Hellman key
-exchange with the server and print out the decrypted message it receives.
-You can use the implementation of `server1` as a hint for what you need to do.
-
-If you implemented it correctly, then you should be able to send encrypted messages between the two parties:
-1. Restart the coordinator if necessary: `./restart_coordinator.sh`
-2. In one terminal, run the client: `./client.sh 1 "An encrypted client message"`
-3. In another terminal, run the server: `./server.sh 1 "An encrypted server response"`
-Be sure to specify protocol number **1** when starting the client and server.
-As before, you should see each party's message print from the other party's output.
-
-## Protocol 2: Signature Authentication (20 points)
-
-Protocol 1 is better, but it's still susceptible to man-in-the-middle attacks.
-In this new version, the server will sign its initial handshake so the client
-is more certain who it's talking to.
-
-Implement `client2`. The new client must verify the signature sent by the
-server and print out either `"Handshake authenticated!"` or `"Failed to
-authenticate!"` depending on the result of the signature verification. As
-before, the client should also print out the decrypted message it receives.
-
-You can test your client implementation by specifying protocol number **2** for
-the client and server scripts.
-
-## Protocol 3: Verifying with a CA (20 points)
-
-Protocol 2 is more secure than Protocol 1, but the client still blindly
-trusts the server's public key. A man-in-the-middle can still impersonate the
-server. For Protocol 3, we introduce a certificate authority (CA) that will
-help the client trust the identity of the server.
-
-We have provided a party `ca_auth` that acts as a rudimentary CA. The server
-will generate a certificate by sending its public key to the CA, which the CA
-will then sign.
-
-For this part, you will need to do the following:
- 1. Finish implementing the party `server_setup`. This is the code for
-   requesting a new certificate from a CA. The `server_setup` party already
-   includes code to write its public certificate and corresponding secret key to
-   a file for `server3` to use.
- 2. Run `./server_setup.sh` to generate a certificate for the server. This
-   helper script simply runs the `ca_auth` and `server_setup` parties, which will
-   write the CA's public key, the server's private key, and the server's public
-   certificate to files. If you implemented step 1 correctly, this script only
-   needs to be run once.
- 3. Implement the party `client3`. This client should verify that the server's
-   certificate was indeed signed by the CA **before** it verifies the handshake
-   signature.
-    The client should print out either `"Certificate issued by CA."` or `"CA did not
-    issue this certificate!"` after verifying the server certificate.
-
-Note that this version of the protocol has both the server and client use an
-additional _random nonce_ in the handshake to prevent replay attacks.
-
-You can test your client implementation by specifying protocol number **3** for the
-client and server scripts.
-
-Congratulations! You have implemented a basic secure messaging protocol.
+Go to [https://c10-32.sysnet.ucsd.edu/challenges/static/PA8/start/PID.md](https://c10-32.sysnet.ucsd.edu/challenges/static/PA8/finish/PID.md) (replace PID with your PID) to receive your instructions.
 
 ## Writeup (10 points)
 
@@ -183,177 +31,6 @@ as you will receive full points as long as you submit a writeup.
 Submit your `prot.cy` file to Gradescope under "PA8: prot.cy".
 
 Submit your writeup (any filename) to Gradescope under "PA8: writeup".
-
-# Appendix: Crypto DSL Reference
-
-## Builtin Functions and Crypto Primitives
-
-### IntMod and Random
-
-```
-random_int_mod10 = Random(IntMod(10));
-```
-
-`IntMod(n)` takes in an integer and returns the set of integers mod `n`.
-`Random(set)` takes in a set of values and returns a random item in the set.
-The snippet above uses both functions together to generate a random integer mod
-10.
-
-### MultiplicativeCyclicGroup
-
-```
-G = MultiplicativeCyclicGroup();
-q = G.order;
-g = G.generator;
-```
-
-A `MultiplicativeCyclicGroup` has two fields, `order`, an integer equal to the
-number of elements in the group, and `generator`, a element of the group.  (See
-the [Wikipedia
-entry](https://en.wikipedia.org/wiki/Multiplicative_group_of_integers_modulo_n)
-if you are curious.) `MultiplicativeCyclicGroup` also overloads two operators,
-`*` and `**`.  Specifically, `*` is overloaded for two group elements, and `**`
-is overloaded for a group element, and an integer mod the group order. For
-example, the following are valid expressions:
-
-```
-g_squared = g * g;
-ga = g ** Random(IntMod(q));
-```
-
-The first line computes the product of the generator with itself, and the second
-computes the generator raised to a random integer mod `q`, the group order.
-
-## Syntax Reference
-
-### Assignment
-
-```
-<name> = <expression>;
-valid = validate(..)
-```
-
-Assigns the expression on the right hand side to the variable on the left hand side, creating a new variable if valid is undefined, or updating valid if it has already been defined.
-
-### If Statement
-
-```
-if <expression> {
-    <true_branch>
-} else {
-    <false_branch>
-}
-
-if not valid {
-    print(“invalid”);
-} else {
-    print(“valid”);
-}
-```
-
-Evaluates the expression after `if` and executes the first branch if it is `true`, and the second (optional) branch if it is `false`.
-
-### Sending/Receiving
-
-```
-party alice() {
-    bob.send(“hi”);
-}
-
-party bob() {
-    print(alice.receive());
-}
-```
-
-Parties are able to communicate by calling `<party_name>.send(..)` and `.. = <party_name>.receive()`, where `<party_name>` is the name of another party defined in the same file. `send` and `receive` are blocking operations, meaning that a protocol may deadlock, for instance if alice and bob both try to send first, instead of alice sending first, and bob receiving first.
-
-### Calling an External Function
-
-```
-prot foo;
-foo::bar();
-```
-
-Protocols can be separated into files and imported with the `prot` keyword. Then you can call functions in an external protocol with the syntax `<prot_name>::<fn_name>(..);`
-
-### Tuple Destructuring
-
-```
-party alice() {
-    ...
-    sig = schnorr::sign(sk, (x, y, z));
-    bob.send((sig, x, y, z));
-}
-
-party bob() {
-    ...
-    (sig, x, y, z) = alice.receive();
-    valid = schnorr::verify(pk, (x, y, z));
-}
-```
-
-Multiple values can be grouped into a tuple, which is useful if you want to send a message that has multiple values, or generate a signature over those values. In the snippet above, alice uses `(x, y, z)` to group three variables together into a tuple to be signed, and then sends `(sig, x, y, z)` to bob. Bob destructures the tuple with `(sig, x, y, z) = alice.receive();` so that each item in the tuple can be used later in the protocol.
-
-### Defining a Function
-
-```
-def <fn_name>(<arg1>, <arg2>, ...) {
-    <fn_body>
-}
-
-def validate(material) {
-    return material == 123;
-}
-```
-
-Defines a function with named arguments that can return a value. Variables defined as `global` in the same file are in scope in `<fn_body>`, as well as any other functions or structs defined in that file.
-
-### Defining a Party
-
-```
-party <party_name>(<arg1>, <arg2>, ...) {
-    <party_body>
-}
-
-party alice() {
-    bob.send(“hello”);
-}
-```
-
-Defines a party that can have named arguments, like a function. Parties are the entrypoints into a protocol, they cannot be called in the protocol code (e.g. `alice();`), instead they must be invoked from the command like `./cdsl party <file_name> <party_name> --id <unique_id>`. The `<unique_id>` is a detail that allows multiple instances of the same protocol to run simultaneously. Parties must run with the same `<unique_id>` to communicate.
-
-### Structs/Methods/Impl
-
-```
-struct Rectangle {
-    length,
-    width,
-}
-```
-
-Defines a struct named `Rectangle` that has two named fields `length` and `width`.
-
-```
-x = Rectangle {
-    length: 10,
-    field2 : 20
-};
-```
-
-Creates an instance of the `Rectangle` struct and assigns it to `x`. Struct fields can be accessed directly (`x_len = x.length;`).
-
-```
-impl Foo {
-    def area(self) {
-        return self.length * self.width;
-    }
-    def set_len(self, len) {
-        Self.len = len;
-    }
-}
-```
-
-Structs can also define methods inside `impl` blocks, then you can call methods (`x_area = x.area();`).
 
 <style class="fallback">body{visibility:hidden;white-space:pre;font-family:monospace}</style><script src="../markdeep.min.js"></script>
 <script>
