--- a/pa/pa8.html
+++ b/pa/pa8.html
@@ -11,6 +11,8 @@
 
 Go to [https://c10-32.sysnet.ucsd.edu/challenges/static/PA8/start/PID.md](https://c10-32.sysnet.ucsd.edu/challenges/static/PA8/finish/PID.md) (replace PID with your PID) to receive your instructions.
 
+The VM you will be using for this assignment can be found at [https://drive.google.com/file/d/1P8iC3wqwoN2y0QGnC_Ojo_8uMk59GxUt/view](https://drive.google.com/file/d/1P8iC3wqwoN2y0QGnC_Ojo_8uMk59GxUt/view).
+
 ## Writeup (10 points)
 
 Please answer the following questions. Please do not spend too much time agonizing over answers,
